# DeepReaction

./: README.md  enviroment.yml  environment.yml  hyperopt.sh  hyperopt_bayes.sh  inference.sh  predict.ipynb  predict_reaction.ipynb  predict_reaction.py  predict_reaction_cpu.py  predictions.csv  pyproject.toml  setup.py  train.ipynb  train.py  train.sh  train_cpu.sh  train_cv_parallel.sh  train_demo.ipynb  train_reaction.ipynb  train_reaction.py  train_reaction_cpu.py  train_single.sh
deep/: __init__.py
deep/cli/: __init__.py  bayesopt.py  config.py  finetune.py  hyperopt.py  inference.py  train.py  train_cv_parallel.py
deep/cli/.ipynb_checkpoints/: config-checkpoint.py  finetune-checkpoint.py  inference-checkpoint.py
deep/config/: config.py
deep/core/: __init__.py  predictor.py  trainer.py
deep/data/: PygReaction.py  __init__.py  load_QM9.py  load_Reaction.py
deep/data/.ipynb_checkpoints/: load_MD17-checkpoint.py  load_QM7-checkpoint.py  load_QM8-checkpoint.py  load_QMugs-checkpoint.py  load_Reaction-checkpoint.py
deep/model/: __init__.py  activations.py  dimenet.py  dimenetplusplus.py  head.py  mlp.py  model.py  model_factory.py  readout.py
deep/model/.ipynb_checkpoints/: dimenet-checkpoint.py  dimenetplusplus-checkpoint.py  head-checkpoint.py  model-checkpoint.py  reporting-checkpoint.py
deep/module/: __init__.py  pl_wrap.py
deep/utils/: __init__.py  visualization.py
deep/utils/.ipynb_checkpoints/: metrics-checkpoint.py  model_utils-checkpoint.py  visualization-checkpoint.py
deepreaction/: __init__.py  api.py
deepreaction/.ipynb_checkpoints/: __init__-checkpoint.py
deepreaction/cli/: __init__.py  bayesopt.py  finetune.py  hyperopt.py  train.py  train_cv_parallel.py
deepreaction/cli/.ipynb_checkpoints/: __init__-checkpoint.py  predict-checkpoint.py  (+1 more)
deepreaction/config/: config.py
deepreaction/core/: config.py  dataset.py  predictor.py  trainer.py
deepreaction/data/: PygReaction.py  dataset.py  load_Reaction.py  loading_utils.py
deepreaction/model/: __init__.py  base.py  dimenet.py  dimenetplusplus.py  factory.py  model.py  model_factory.py  readout.py
deepreaction/module/: __init__.py  pl_wrap.py
deepreaction/setting/: untitled.txt
deepreaction/tools/: __init__.py  install_script.py
deepreaction/utils/: __init__.py  metrics.py
docs/source/: conf.py
example/: default.yml  finetune.sh  finetune_lowlr.sh  hyper.py  hyper_grid.py  hyperopt.sh  inference.sh  predict.ipynb  predict.py  train.py  train_demo.ipynb  train_reaction.ipynb  train_reaction.py  train_reaction_cv.py
example/.ipynb_checkpoints/: predict-checkpoint.py  predict_reaction-checkpoint.py  train-checkpoint.py  train_demo-checkpoint.ipynb  train_reaction-checkpoint.ipynb
post/: analysis.py  fold_analysis.py
post/.ipynb_checkpoints/: overlap-checkpoint.py
source/: conf.py
test/: finetune.sh  finetune_full.sh  finetune_lowlr.sh  inference.sh  predict_reaction.ipynb  predict_reaction.py  train.sh  train_demo.ipynb  train_reaction.ipynb  train_reaction.py  train_reaction_cv_gpu.py
test/.ipynb_checkpoints/: predict_reaction-checkpoint.ipynb  train_reaction-checkpoint.ipynb
(+15 files in other folders)
