[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deepreaction"
version = "0.1.0"
description = "Deep learning framework for chemical reaction property prediction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DeepReaction Team", email = "example@example.com"}
]
maintainers = [
    {name = "DeepReaction Team", email = "example@example.com"}
]
keywords = ["chemistry", "machine learning", "reactions", "deep learning", "cheminformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "rdkit>=2022.3.5",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov",
    "mypy",
]
notebook = [
    "jupyterlab",
    "ipywidgets",
    "notebook",
]
visualization = [
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/chimie-paristech-CTM/DeepReaction"
"Bug Tracker" = "https://github.com/chimie-paristech-CTM/DeepReaction/issues"
"Documentation" = "https://github.com/chimie-paristech-CTM/DeepReaction#readme"
"Source Code" = "https://github.com/chimie-paristech-CTM/DeepReaction"

[tool.setuptools]
packages = ["deepreaction"]

[tool.setuptools.package-data]
deepreaction = ["assets/*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[project.scripts]
deepreaction-train = "deepreaction.cli.train:main"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"